New font (Lato) and new items

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,9 +6,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href='http://fonts.googleapis.com/css?family=Istok+Web' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/app.css" />
-
 </head>
 <body>
     <div class="contain-to-grid sticky">
@@ -29,6 +28,7 @@
             </section>
         </nav>
     </div>
+    <h1 class="topic-title">Topic title</h1>
     <section class="articles-list">
         <article class="clearfix">
             <div>
@@ -36,12 +36,27 @@
                 <h1>Massive imports in MySQL</h1>
                 <p>20 millions rows in few seconds</p>
             </div>
+            <div class="article-credentials">
+                Charles-Emmanuel, 22 janvier 2014
+            </div>
         </article>
         <article>
             <div>
-                <img class="article-img right" src="http://lorempixel.com/75/75/" />
+                <img class="right" src="http://lorempixel.com/75/75/" />
                 <h1>Creating a blog in 1000 lessons</h1>
                 <p>Spécial dédicace! Parce que tout n'est pas si rapide...</p>
+            </div>
+            <div class="article-credentials">
+                Gauthier, 01 janvier 1970
+            </div>
+        </article>
+        <article>
+            <div>
+                <h1>Design is life</h1>
+                <p>La fan des pictos et pourtant aucune photo en illustration...</p>
+            </div>
+            <div class="article-credentials">
+                Adeline, 31 février 2017
             </div>
         </article>
     </section>
