--- a/examples/index.html
+++ b/examples/index.html
@@ -61,6 +61,10 @@
         </article>
     </section>
 
+    <div class="credentials">
+        Wemucs team
+    </div>
+
     <script src="js/wemucs.js"></script>
 </body>
 </html>
