Improved article view

--- a/examples/article.html
+++ b/examples/article.html
@@ -43,15 +43,32 @@
                 </p>
                 <p>
                     Quelques mesures :
-                    <ul>
-                        <li>6 Go</li>
-                        <li>60 Go</li>
-                        <li>600 Go</li>
-                    </ul>
                 </p>
+                <ul>
+                    <li>6 Go</li>
+                    <li>60 Go</li>
+                    <li>600 Go</li>
+                </ul>
                 <p>
                     <code>$this->isSuperCool();</code>
                 </p>
+            </div>
+            <div class="article-credentials">
+                Charles-Emmanuel, 01 janvier 2010
+            </div>
+            <div class="article-topic">
+                Publié dans High-Tech
+            </div>
+        </article>
+    </section>
+
+    <section class="related-articles">
+        <h1>Related articles</h1>
+        <article class="clearfix">
+            <div>
+                <img class="article-img right" src="http://lorempixel.com/75/75/" />
+                <h1>Massive imports in MySQL</h1>
+                <p>20 millions rows in few seconds</p>
             </div>
         </article>
     </section>
