--- a/examples/article.html
+++ b/examples/article.html
@@ -32,6 +32,7 @@
         <article>
             <h1>Massive imports in MySQL</h1>
             <h2>20 millions rows in few seconds</h2>
+            <img class="article-img" src="http://lorempixel.com/300/100/"></img>
             <div class="content">
                 <p>
                     Si vous avez besoin de remonter une base MySQL de plusieurs dizaines de Go, vous aurez sans doute été
