--- a/examples/article.html
+++ b/examples/article.html
@@ -64,11 +64,11 @@
     </section>
 
     <section class="related-articles">
-        <h1>Related articles</h1>
+        <h1 class="section-title">Related articles</h1>
         <article class="clearfix">
             <div>
                 <img class="article-img right" src="http://lorempixel.com/75/75/" />
-                <h1>Massive imports in MySQL</h1>
+                <h2>Massive imports in MySQL</h2>
                 <p>20 millions rows in few seconds</p>
             </div>
         </article>
