--- a/examples/index.html
+++ b/examples/index.html
@@ -28,7 +28,7 @@
             </section>
         </nav>
     </div>
-    <h1 class="topic-title">Topic title</h1>
+    <h1 class="section-title">Topic title</h1>
     <section class="articles-list">
         <article class="clearfix">
             <div>
