Improved medium and large views

--- a/examples/article.html
+++ b/examples/article.html
@@ -28,51 +28,59 @@
             </section>
         </nav>
     </div>
-    <section class="article-view">
-        <article>
-            <h1>Massive imports in MySQL</h1>
-            <h2>20 millions rows in few seconds</h2>
-            <img class="article-img" src="http://lorempixel.com/300/100/"></img>
-            <div class="content">
-                <p>
-                    Si vous avez besoin de remonter une base MySQL de plusieurs dizaines de Go, vous aurez sans doute été
-                    confronté à des "petits" soucis de performances.
-                </p>
-                <p>
-                    Dans notre cas, nous prendrons un exemple simple : exporter les données d'une base existante,
-                    et les intégrer massivement dans une nouvelle, tout fraiche. Comme sur <a href="index.html">ce lien</a>.
-                </p>
-                <p>
-                    Quelques mesures :
-                </p>
-                <ul>
-                    <li>6 Go</li>
-                    <li>60 Go</li>
-                    <li>600 Go</li>
-                </ul>
-                <p>
-                    <code>$this->isSuperCool();</code>
-                </p>
-            </div>
-            <div class="article-credentials">
-                Charles-Emmanuel, 01 janvier 2010
-            </div>
-            <div class="article-topic">
-                Publié dans High-Tech
-            </div>
-        </article>
-    </section>
+    <div class="row">
+        <div class="large-12 columns">
+            <section class="article-view">
+                <article>
+                    <h1>Massive imports in MySQL</h1>
+                    <h2>20 millions rows in few seconds</h2>
+                    <img class="article-img" src="http://lorempixel.com/300/100/"/>
+                    <div class="content">
+                        <p>
+                            Si vous avez besoin de remonter une base MySQL de plusieurs dizaines de Go, vous aurez sans doute été
+                            confronté à des "petits" soucis de performances.
+                        </p>
+                        <p>
+                            Dans notre cas, nous prendrons un exemple simple : exporter les données d'une base existante,
+                            et les intégrer massivement dans une nouvelle, tout fraiche. Comme sur <a href="index.html">ce lien</a>.
+                        </p>
+                        <p>
+                            Quelques mesures :
+                        </p>
+                        <ul>
+                            <li>6 Go</li>
+                            <li>60 Go</li>
+                            <li>600 Go</li>
+                        </ul>
+                        <p>
+                            <code>$this->isSuperCool();</code>
+                        </p>
+                    </div>
+                    <div class="article-credentials">
+                        Charles-Emmanuel, 01 janvier 2010
+                    </div>
+                    <div class="article-topic">
+                        Publié dans High-Tech
+                    </div>
+                </article>
+            </section>
+        </div>
+    </div>
+    <div class="row">
+        <div class="large-12 columns">
+            <section class="related-articles">
+                <h1 class="section-title">Related articles</h1>
+                <article class="clearfix">
+                    <div>
+                        <img class="article-img right" src="http://lorempixel.com/75/75/" />
+                        <h2>Massive imports in MySQL</h2>
+                        <p>20 millions rows in few seconds</p>
+                    </div>
+                </article>
+            </section>
+        </div>
+    </div>
 
-    <section class="related-articles">
-        <h1 class="section-title">Related articles</h1>
-        <article class="clearfix">
-            <div>
-                <img class="article-img right" src="http://lorempixel.com/75/75/" />
-                <h2>Massive imports in MySQL</h2>
-                <p>20 millions rows in few seconds</p>
-            </div>
-        </article>
-    </section>
 
     <section class="credentials">
         Wemucs team
