--- a/examples/index.html
+++ b/examples/index.html
@@ -33,8 +33,8 @@
         <article class="clearfix">
             <div>
                 <img class="article-img right" src="http://lorempixel.com/75/75/" />
-                <h1>Massive imports in MySQL</h1>
-                <p>20 millions rows in few seconds</p>
+                <h1><a href="article.html">Massive imports in MySQL</a></h1>
+                <p><a>20 millions rows in few seconds</a></p>
             </div>
             <div class="article-credentials">
                 Charles-Emmanuel, 22 janvier 2014
