--- a/examples/index.html
+++ b/examples/index.html
@@ -10,158 +10,162 @@
     <link rel="stylesheet" href="css/app.css" />
 </head>
 <body>
-    <header class="header" data-topbar role="navigation" data-options="sticky_on: large">
-        <div class="row">
-            <div class="large-12 columns">
-                <div class="logo-container">
-                    <img class="logo" src="http://lorempixel.com/100/40/" />
+    <div class="wrapper">
+        <header class="header" data-topbar role="navigation" data-options="sticky_on: large">
+            <div class="row">
+                <div class="large-12 columns">
+                    <div class="logo-container">
+                        <img class="logo" src="http://lorempixel.com/100/40/" />
 
-                    Wemucs
+                        Wemucs
+                    </div>
+
+                    <div class="right">
+                        <ul class="inline-list list-links">
+                            <li>
+                                <a href="#">
+                                    Blog
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Docs
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    App
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </div>
+        </header>
 
-                <div class="right">
-                    <ul class="inline-list list-links">
-                        <li>
-                            <a href="#">
-                                Blog
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Docs
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                App
-                            </a>
-                        </li>
-                    </ul>
+        <div class="sub-header">
+            <div class="row">
+                <div class="large-12 columns">
+                    <h1 class="title title-main">
+                        Page title
+                    </h1>
                 </div>
             </div>
         </div>
-    </header>
 
-    <div class="sub-header">
-        <div class="row">
-            <div class="large-12 columns">
-                <h1 class="title title-main">
-                    Page title
-                </h1>
+        <section class="content">
+            <div class="row">
+                <div class="small-12 medium-4 large-4 columns">
+                    <article class="article-entry">
+                        <div>
+                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+
+                            <h2 class="article-title">
+                                Massive imports in MySQL
+                            </h2>
+                            <p class="article-content">
+                                20 millions rows in few seconds
+                            </p>
+                        </div>
+                        <div class="article-credentials">
+                            Charles-Emmanuel, 22 janvier 2014
+                        </div>
+                    </article>
+                </div>
+
+                <div class="small-12 medium-4 large-4 columns">
+                    <article class="article-entry">
+                        <div>
+                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                            <h2 class="article-title">
+                                Creating a blog in 1000 lessons
+                            </h2>
+                            <p class="article-content">
+                                Spécial dédicace! Parce que tout n'est pas si rapide...
+                            </p>
+                        </div>
+                        <div class="article-credentials">
+                            Gauthier, 01 janvier 1970
+                        </div>
+                    </article>
+                </div>
+
+                <div class="small-12 medium-4 large-4 columns">
+                    <article class="article-entry">
+                        <div>
+                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+
+                            <h2 class="article-title">
+                                Design is life
+                            </h2>
+                            <p class="article-content">
+                                La fan des pictos et pourtant aucune photo en illustration...
+                            </p>
+                        </div>
+                        <div class="article-credentials">
+                            Adeline, 31 février 2017
+                        </div>
+                    </article>
+                </div>
+                <div class="small-12 medium-4 large-4 columns">
+                    <article class="article-entry">
+                        <div>
+                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                            <h2 class="article-title">
+                                Massive imports in MySQL
+                            </h2>
+                            <p class="article-content">
+                                20 millions rows in few seconds
+                            </p>
+                        </div>
+                        <div class="article-credentials">
+                            Charles-Emmanuel, 22 janvier 2014
+                        </div>
+                    </article>
+                </div>
+
+                <div class="small-12 medium-4 large-4 columns">
+                    <article class="article-entry">
+                        <div>
+                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                            <h2 class="article-title">
+                                Creating a blog in 1000 lessons
+                            </h2>
+                            <p class="article-content">
+                                Spécial dédicace! Parce que tout n'est pas si rapide...
+                            </p>
+                        </div>
+                        <div class="article-credentials">
+                            Gauthier, 01 janvier 1970
+                        </div>
+                    </article>
+                </div>
+
+                <div class="small-12 medium-4 large-4 columns">
+                    <article class="article-entry">
+                        <div>
+                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+
+                            <h2 class="article-title">
+                                Design is life
+                            </h2>
+
+                            <p class="article-content">
+                                La fan des pictos et pourtant aucune photo en illustration...
+                            </p>
+                        </div>
+                        <div class="article-credentials">
+                            Adeline, 31 février 2017
+                        </div>
+                    </article>
+                </div>
             </div>
-        </div>
+        </section>
+
+        <div class="push"></div>
     </div>
 
-    <section class="content">
-        <div class="row">
-            <div class="small-12 medium-4 large-4 columns">
-                <article class="article-entry">
-                    <div>
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-
-                        <h2 class="article-title">
-                            Massive imports in MySQL
-                        </h2>
-                        <p class="article-content">
-                            20 millions rows in few seconds
-                        </p>
-                    </div>
-                    <div class="article-credentials">
-                        Charles-Emmanuel, 22 janvier 2014
-                    </div>
-                </article>
-            </div>
-
-            <div class="small-12 medium-4 large-4 columns">
-                <article class="article-entry">
-                    <div>
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-                        <h2 class="article-title">
-                            Creating a blog in 1000 lessons
-                        </h2>
-                        <p class="article-content">
-                            Spécial dédicace! Parce que tout n'est pas si rapide...
-                        </p>
-                    </div>
-                    <div class="article-credentials">
-                        Gauthier, 01 janvier 1970
-                    </div>
-                </article>
-            </div>
-
-            <div class="small-12 medium-4 large-4 columns">
-                <article class="article-entry">
-                    <div>
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-
-                        <h2 class="article-title">
-                            Design is life
-                        </h2>
-                        <p class="article-content">
-                            La fan des pictos et pourtant aucune photo en illustration...
-                        </p>
-                    </div>
-                    <div class="article-credentials">
-                        Adeline, 31 février 2017
-                    </div>
-                </article>
-            </div>
-            <div class="small-12 medium-4 large-4 columns">
-                <article class="article-entry">
-                    <div>
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-                        <h2 class="article-title">
-                            Massive imports in MySQL
-                        </h2>
-                        <p class="article-content">
-                            20 millions rows in few seconds
-                        </p>
-                    </div>
-                    <div class="article-credentials">
-                        Charles-Emmanuel, 22 janvier 2014
-                    </div>
-                </article>
-            </div>
-
-            <div class="small-12 medium-4 large-4 columns">
-                <article class="article-entry">
-                    <div>
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-                        <h2 class="article-title">
-                            Creating a blog in 1000 lessons
-                        </h2>
-                        <p class="article-content">
-                            Spécial dédicace! Parce que tout n'est pas si rapide...
-                        </p>
-                    </div>
-                    <div class="article-credentials">
-                        Gauthier, 01 janvier 1970
-                    </div>
-                </article>
-            </div>
-
-            <div class="small-12 medium-4 large-4 columns">
-                <article class="article-entry">
-                    <div>
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-
-                        <h2 class="article-title">
-                            Design is life
-                        </h2>
-
-                        <p class="article-content">
-                            La fan des pictos et pourtant aucune photo en illustration...
-                        </p>
-                    </div>
-                    <div class="article-credentials">
-                        Adeline, 31 février 2017
-                    </div>
-                </article>
-            </div>
-        </div>
-    </section>
-
-    <footer>
+    <footer class="footer">
         <div class="copyrights">
             <div class="row">
                 <div class="large-12 columns">
