Updated CSS and article view

--- a/examples/index.html
+++ b/examples/index.html
@@ -61,12 +61,15 @@
                             <img class="article-img" src="http://lorempixel.com/1000/500/" />
 
                             <h2 class="article-title">
-                                Massive imports in MySQL
+                                <a href="article.html">
+                                    Massive imports in MySQL
+                                </a>
                             </h2>
                             <p class="article-content">
                                 20 millions rows in few seconds
                             </p>
                         </div>
+
                         <div class="article-credentials">
                             Charles-Emmanuel, 22 janvier 2014
                         </div>
@@ -78,7 +81,9 @@
                         <div>
                             <img class="article-img" src="http://lorempixel.com/1000/500/" />
                             <h2 class="article-title">
-                                Creating a blog in 1000 lessons
+                                <a href="article.html">
+                                    Creating a blog in 1000 lessons
+                                </a>
                             </h2>
                             <p class="article-content">
                                 Spécial dédicace! Parce que tout n'est pas si rapide...
@@ -96,8 +101,11 @@
                             <img class="article-img" src="http://lorempixel.com/1000/500/" />
 
                             <h2 class="article-title">
-                                Design is life
+                                <a href="article.html">
+                                    Design is life
+                                </a>
                             </h2>
+
                             <p class="article-content">
                                 La fan des pictos et pourtant aucune photo en illustration...
                             </p>
@@ -112,7 +120,9 @@
                         <div>
                             <img class="article-img" src="http://lorempixel.com/1000/500/" />
                             <h2 class="article-title">
-                                Massive imports in MySQL
+                                <a href="article.html">
+                                    Massive imports in MySQL
+                                </a>
                             </h2>
                             <p class="article-content">
                                 20 millions rows in few seconds
@@ -129,7 +139,9 @@
                         <div>
                             <img class="article-img" src="http://lorempixel.com/1000/500/" />
                             <h2 class="article-title">
-                                Creating a blog in 1000 lessons
+                                <a href="article.html">
+                                    Creating a blog in 1000 lessons
+                                </a>
                             </h2>
                             <p class="article-content">
                                 Spécial dédicace! Parce que tout n'est pas si rapide...
@@ -147,7 +159,9 @@
                             <img class="article-img" src="http://lorempixel.com/1000/500/" />
 
                             <h2 class="article-title">
-                                Design is life
+                                <a href="article.html">
+                                    Design is life
+                                </a>
                             </h2>
 
                             <p class="article-content">
