--- a/examples/article.html
+++ b/examples/article.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Massive imports in MySQL</title>
+    <title>Titre de la page</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -10,82 +10,83 @@
     <link rel="stylesheet" href="css/app.css" />
 </head>
 <body>
-    <div class="contain-to-grid sticky">
-        <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
-            <ul class="title-area">
-                <li class="name">
-                    <h1><a href="#">Logo Wemucs</a></h1>
-                </li>
-                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-            </ul>
-            <section class="top-bar-section">
-                <ul class="left">
-                    <li class="active"><a href="#">High-tech</a></li>
-                    <li><a href="#">Lifestyle</a></li>
-                    <li><a href="#">Others</a></li>
-                </ul>
-            </section>
-        </nav>
-    </div>
-    <div class="row">
-        <div class="large-12 columns">
-            <section class="article-view">
-                <article>
-                    <h1>Massive imports in MySQL</h1>
-                    <h2>20 millions rows in few seconds</h2>
-                    <img class="article-img" src="http://lorempixel.com/300/100/"/>
-                    <div class="content">
-                        <p>
-                            Si vous avez besoin de remonter une base MySQL de plusieurs dizaines de Go, vous aurez sans doute été
-                            confronté à des "petits" soucis de performances.
-                        </p>
-                        <p>
-                            Dans notre cas, nous prendrons un exemple simple : exporter les données d'une base existante,
-                            et les intégrer massivement dans une nouvelle, tout fraiche. Comme sur <a href="index.html">ce lien</a>.
-                        </p>
-                        <p>
-                            Quelques mesures :
-                        </p>
-                        <ul>
-                            <li>6 Go</li>
-                            <li>60 Go</li>
-                            <li>600 Go</li>
-                        </ul>
-                        <p>
-                            <code>$this->isSuperCool();</code>
-                        </p>
-                    </div>
-                    <div class="article-credentials">
-                        Charles-Emmanuel, 01 janvier 2010
-                    </div>
-                    <div class="article-topic">
-                        Publié dans High-Tech
-                    </div>
-                </article>
-            </section>
+<div class="wrapper">
+    <header class="header" data-topbar role="navigation" data-options="sticky_on: large">
+        <div class="row">
+            <div class="large-12 columns">
+                <div class="logo-container">
+                    <img class="logo" src="http://lorempixel.com/100/40/" />
+
+                    Wemucs
+                </div>
+
+                <div class="right">
+                    <ul class="inline-list list-links">
+                        <li>
+                            <a href="#">
+                                Blog
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Docs
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                App
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="large-12 columns">
-            <section class="related-articles">
-                <h1 class="section-title">Related articles</h1>
-                <article class="clearfix">
-                    <div>
-                        <img class="article-img right" src="http://lorempixel.com/75/75/" />
-                        <h2>Massive imports in MySQL</h2>
-                        <p>20 millions rows in few seconds</p>
-                    </div>
-                </article>
-            </section>
+    </header>
+
+    <div class="sub-header">
+        <div class="row">
+            <div class="large-12 columns">
+                <h1 class="title title-main">
+                    Massive imports in MySQL
+                </h1>
+            </div>
         </div>
     </div>
 
+    <section class="content">
+        <div class="row">
+            <div class="small-12 columns">
+                <article class="article">
+                    <img class="article-img" src="http://lorempixel.com/1000/500/" />
 
-    <section class="credentials">
-        Wemucs team
+                    <p>
+                        20 millions rows in few seconds. "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."
+                    </p>
+                    <p>
+                        20 millions rows in few seconds. "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."
+                    </p>
+                    <p>
+                        20 millions rows in few seconds. "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."
+                    </p>
+                </article>
+            </div>
     </section>
 
-    <script src="js/wemucs.js"></script>
+    <div class="push"></div>
+</div>
+
+<footer class="footer">
+    <div class="copyrights">
+        <div class="row">
+            <div class="large-12 columns">
+                <p class="text text-footer text-copyrights">
+                    © 2015 Wemucs • All rights reserved
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script src="js/wemucs.js"></script>
 </body>
 </html>
