--- a/examples/index.html
+++ b/examples/index.html
@@ -56,10 +56,10 @@
         <section class="content">
             <div class="row">
                 <div class="small-12 medium-4 large-4 columns">
-                    <article class="article-entry">
-                        <div>
-                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    <article class="article">
+                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
 
+                        <div class="article-body">
                             <h2 class="article-title">
                                 <a href="article.html">
                                     Massive imports in MySQL
@@ -68,18 +68,19 @@
                             <p class="article-content">
                                 20 millions rows in few seconds
                             </p>
-                        </div>
 
-                        <div class="article-credentials">
-                            Charles-Emmanuel, 22 janvier 2014
+                            <div class="article-credentials">
+                                Charles-Emmanuel, 22 janvier 2014
+                            </div>
                         </div>
                     </article>
                 </div>
 
                 <div class="small-12 medium-4 large-4 columns">
-                    <article class="article-entry">
-                        <div>
-                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    <article class="article">
+                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
+
+                        <div class="article-body">
                             <h2 class="article-title">
                                 <a href="article.html">
                                     Creating a blog in 1000 lessons
@@ -88,17 +89,19 @@
                             <p class="article-content">
                                 Spécial dédicace! Parce que tout n'est pas si rapide...
                             </p>
-                        </div>
-                        <div class="article-credentials">
-                            Gauthier, 01 janvier 1970
+
+                            <div class="article-credentials">
+                                Gauthier, 01 janvier 1970
+                            </div>
                         </div>
                     </article>
                 </div>
 
                 <div class="small-12 medium-4 large-4 columns">
-                    <article class="article-entry">
-                        <div>
-                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    <article class="article">
+                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
+
+                        <div class="article-body">
 
                             <h2 class="article-title">
                                 <a href="article.html">
@@ -109,16 +112,18 @@
                             <p class="article-content">
                                 La fan des pictos et pourtant aucune photo en illustration...
                             </p>
-                        </div>
-                        <div class="article-credentials">
-                            Adeline, 31 février 2017
+
+                            <div class="article-credentials">
+                                Adeline, 31 février 2017
+                            </div>
                         </div>
                     </article>
                 </div>
                 <div class="small-12 medium-4 large-4 columns">
-                    <article class="article-entry">
-                        <div>
-                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    <article class="article">
+                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
+
+                        <div class="article-body">
                             <h2 class="article-title">
                                 <a href="article.html">
                                     Massive imports in MySQL
@@ -127,17 +132,19 @@
                             <p class="article-content">
                                 20 millions rows in few seconds
                             </p>
-                        </div>
-                        <div class="article-credentials">
-                            Charles-Emmanuel, 22 janvier 2014
+
+                            <div class="article-credentials">
+                                Charles-Emmanuel, 22 janvier 2014
+                            </div>
                         </div>
                     </article>
                 </div>
 
                 <div class="small-12 medium-4 large-4 columns">
-                    <article class="article-entry">
-                        <div>
-                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    <article class="article">
+                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
+
+                        <div class="article-body">
                             <h2 class="article-title">
                                 <a href="article.html">
                                     Creating a blog in 1000 lessons
@@ -146,17 +153,19 @@
                             <p class="article-content">
                                 Spécial dédicace! Parce que tout n'est pas si rapide...
                             </p>
-                        </div>
-                        <div class="article-credentials">
-                            Gauthier, 01 janvier 1970
+
+                            <div class="article-credentials">
+                                Gauthier, 01 janvier 1970
+                            </div>
                         </div>
                     </article>
                 </div>
 
                 <div class="small-12 medium-4 large-4 columns">
-                    <article class="article-entry">
-                        <div>
-                            <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    <article class="article">
+                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
+
+                        <div class="article-body">
 
                             <h2 class="article-title">
                                 <a href="article.html">
@@ -167,9 +176,10 @@
                             <p class="article-content">
                                 La fan des pictos et pourtant aucune photo en illustration...
                             </p>
-                        </div>
-                        <div class="article-credentials">
-                            Adeline, 31 février 2017
+
+                            <div class="article-credentials">
+                                Adeline, 31 février 2017
+                            </div>
                         </div>
                     </article>
                 </div>
