--- a/examples/index.html
+++ b/examples/index.html
@@ -43,19 +43,9 @@
             </div>
         </header>
 
-        <div class="sub-header">
+        <section class="content-list">
             <div class="row">
-                <div class="large-12 columns">
-                    <h1 class="title title-main">
-                        Page title
-                    </h1>
-                </div>
-            </div>
-        </div>
-
-        <section class="content">
-            <div class="row">
-                <div class="small-12 medium-4 large-4 columns">
+                <div class="small-12 medium-8 large-8 columns">
                     <article class="article">
                         <img class="article-img" src="http://lorempixel.com/1000/500/" />
 
@@ -74,33 +64,26 @@
                             </div>
                         </div>
                     </article>
-                </div>
-
-                <div class="small-12 medium-4 large-4 columns">
                     <article class="article">
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    <img class="article-img" src="http://lorempixel.com/1000/200/" />
 
-                        <div class="article-body">
-                            <h2 class="article-title">
-                                <a href="article.html">
-                                    Creating a blog in 1000 lessons
-                                </a>
-                            </h2>
-                            <p class="article-content">
-                                Spécial dédicace! Parce que tout n'est pas si rapide...
-                            </p>
+                    <div class="article-body">
+                        <h2 class="article-title">
+                            <a href="article.html">
+                                Creating a blog in 1000 lessons
+                            </a>
+                        </h2>
+                        <p class="article-content">
+                            Spécial dédicace! Parce que tout n'est pas si rapide...
+                        </p>
 
-                            <div class="article-credentials">
-                                Gauthier, 01 janvier 1970
-                            </div>
+                        <div class="article-credentials">
+                            Gauthier, 01 janvier 1970
                         </div>
+                    </div>
                     </article>
-                </div>
-
-                <div class="small-12 medium-4 large-4 columns">
                     <article class="article">
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-
+                        <img class="article-img" src="http://lorempixel.com/1000/200/?2" />
                         <div class="article-body">
 
                             <h2 class="article-title">
@@ -120,69 +103,17 @@
                     </article>
                 </div>
                 <div class="small-12 medium-4 large-4 columns">
-                    <article class="article">
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-
-                        <div class="article-body">
-                            <h2 class="article-title">
-                                <a href="article.html">
-                                    Massive imports in MySQL
-                                </a>
-                            </h2>
-                            <p class="article-content">
-                                20 millions rows in few seconds
-                            </p>
-
-                            <div class="article-credentials">
-                                Charles-Emmanuel, 22 janvier 2014
-                            </div>
-                        </div>
-                    </article>
+                    <div class="box">
+                        Qui sommes-nous ?
+                    </div>
+                    <div class="box">
+                        Les catégories
+                    </div>
+                    <div class="box">
+                        Les tips
+                    </div>
                 </div>
 
-                <div class="small-12 medium-4 large-4 columns">
-                    <article class="article">
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-
-                        <div class="article-body">
-                            <h2 class="article-title">
-                                <a href="article.html">
-                                    Creating a blog in 1000 lessons
-                                </a>
-                            </h2>
-                            <p class="article-content">
-                                Spécial dédicace! Parce que tout n'est pas si rapide...
-                            </p>
-
-                            <div class="article-credentials">
-                                Gauthier, 01 janvier 1970
-                            </div>
-                        </div>
-                    </article>
-                </div>
-
-                <div class="small-12 medium-4 large-4 columns">
-                    <article class="article">
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
-
-                        <div class="article-body">
-
-                            <h2 class="article-title">
-                                <a href="article.html">
-                                    Design is life
-                                </a>
-                            </h2>
-
-                            <p class="article-content">
-                                La fan des pictos et pourtant aucune photo en illustration...
-                            </p>
-
-                            <div class="article-credentials">
-                                Adeline, 31 février 2017
-                            </div>
-                        </div>
-                    </article>
-                </div>
             </div>
         </section>
 
