Improvement on the home and article views

--- a/examples/article.html
+++ b/examples/article.html
@@ -46,7 +46,7 @@
         <div class="row">
             <div class="large-12 columns">
                 <h1 class="title title-main">
-                    Massive imports in MySQL
+                    Massive imports in MySQL <small></small>
                 </h1>
             </div>
         </div>
@@ -64,16 +64,69 @@
                                 20 millions rows in few seconds. "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."
                             </p>
                             <p>
-                                20 millions rows in few seconds. "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."
+                                Si vous avez besoin de remonter une base MySQL de plusieurs dizaines de Go, vous aurez sans doute été
+                                confronté à des "petits" soucis de performances.
                             </p>
                             <p>
-                                20 millions rows in few seconds. "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."
+                                Dans notre cas, nous prendrons un exemple simple : exporter les données d'une base existante,
+                                et les intégrer massivement dans une nouvelle, tout fraiche. Comme sur <a href="index.html">ce lien</a>.
+                            </p>
+                            <p>
+                                Quelques mesures :
+                            </p>
+                            <ul>
+                                <li>6 Go</li>
+                                <li>60 Go</li>
+                                <li>600 Go</li>
+                            </ul>
+                            <p>
+                                <code>$this->isSuperCool();</code>
                             </p>
                         </div>
                     </div>
+                    <div class="article-credentials">
+                            <div class="article-credentials-avatar">
+                                <img src="https://fr.gravatar.com/userimage/4051220/fff27b9af3bd7e5f317dc6691bc12b86.jpeg" class="avatar">
+                            </div>
+                            <div class="article-credentials-infos">
+                                <div>
+                                    <b>Charles-Emmanuel, 01 janvier 2010</b>
+                                </div>
+                                <div>
+                                    Lover a simple things. On @twitter.
+                                </div>
+                            </div>
+                    </div>
                 </article>
             </div>
+        </div>
     </section>
+
+    <section class="related-articles">
+        <h1>Related articles</h1>
+        <div class="row">
+            <div class="small-12 columns">
+                <article class="article">
+                    <img class="article-img" src="http://lorempixel.com/1000/200/" />
+
+                    <div class="article-body">
+                        <h2 class="article-title">
+                            <a href="article.html">
+                                Massive imports in MySQL
+                            </a>
+                        </h2>
+                        <p class="article-content">
+                            20 millions rows in few seconds
+                        </p>
+
+                        <div class="article-credentials">
+                            Charles-Emmanuel, 22 janvier 2014
+                        </div>
+                    </div>
+                </article>
+                </div>
+            </div>
+        </section>
 
     <div class="push"></div>
 </div>
