Working on the design and added new Category example page
Yeah, back from holidays!

--- a/examples/article.html
+++ b/examples/article.html
@@ -57,10 +57,20 @@
                         </p>
                     </div>
                     <div class="article-credentials">
-                        Charles-Emmanuel, 01 janvier 2010
+                        <div class="article-credentials-avatar">
+                            <img src="https://fr.gravatar.com/userimage/4051220/fff27b9af3bd7e5f317dc6691bc12b86.jpeg" class="avatar">
+                        </div>
+                        <div class="article-credentials-infos">
+                            <div>
+                                Charles-Emmanuel
+                            </div>
+                            <div class="article-credentials-bio">
+                                Lover a simple things. On @twitter.
+                            </div>
+                        </div>
                     </div>
                     <div class="article-topic">
-                        Publié dans High-Tech
+                        Publié dans <a href="category.html">High-Tech</a>
                     </div>
                 </article>
             </section>
@@ -77,6 +87,14 @@
                         <p>20 millions rows in few seconds</p>
                     </div>
                 </article>
+            </section>
+        </div>
+    </div>
+    <div class="row">
+        <div class="large-12 columns">
+            <section class="related-articles">
+                <h1 class="section-title">Comments</h1>
+
             </section>
         </div>
     </div>
