--- a/examples/category.html
+++ b/examples/category.html
@@ -32,8 +32,9 @@
     <section class="articles-list">
         <div class="row">
             <div class="small-12 medium-8 large-8 columns">
+                <h1 class="section-title">High-Tech</h1>
                 <article>
-                    <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    <img class="article-img" src="http://lorempixel.com/1000/200/?3" />
                     <div class="article-body">
                         <h1 class="article-title">
                             <a href="article.html">
