--- a/examples/index.html
+++ b/examples/index.html
@@ -33,7 +33,9 @@
         <div class="row">
             <div class="small-12 medium-8 large-8 columns">
                 <article>
-                    <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    <a href="article.html">
+                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                    </a>
                     <div class="article-body">
                         <h1 class="article-title">
                             <a href="article.html">
@@ -78,6 +80,27 @@
                         <h1 class="article-title">
                             <a href="article.html">
                                 Design is life
+                            </a>
+                        </h1>
+
+                        <p class="article-content">
+                            <a href="article.html">
+                                La fan des pictos et pourtant aucune photo en illustration...
+                            </a>
+                        </p>
+
+                        <div class="article-credentials">
+                            Adeline, 31 février 2017
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <img class="article-img" src="http://lorempixel.com/1000/200/?2" />
+                    <div class="article-body">
+
+                        <h1 class="article-title">
+                            <a href="article.html">
+                                This is a very very very very very long title
                             </a>
                         </h1>
 
