Minor improvements (font size + background color)

--- a/examples/index.html
+++ b/examples/index.html
@@ -34,7 +34,7 @@
             <div class="small-12 medium-8 large-8 columns">
                 <article>
                     <a href="article.html">
-                        <img class="article-img" src="http://lorempixel.com/1000/500/" />
+                        <img class="article-img" src="http://lorempixel.com/1000/300/" />
                     </a>
                     <div class="article-body">
                         <h1 class="article-title">
@@ -54,7 +54,7 @@
                     </div>
                 </article>
                 <article>
-                    <img class="article-img" src="http://lorempixel.com/1000/200/" />
+                    <!--<img class="article-img" src="http://lorempixel.com/1000/200/" />-->
 
                     <div class="article-body">
                         <h1 class="article-title">
