--- a/examples/index.html
+++ b/examples/index.html
@@ -116,15 +116,21 @@
                     </div>
                 </article>
             </div>
-            <div class="small-12 medium-4 large-4 columns">
+            <div class="small-12 medium-4 large-4 columns sidebar">
                 <div class="box">
                     Qui sommes-nous ?
+
                 </div>
                 <div class="box">
-                    Les catégories
+                    <h1>Les catégories</h1>
+                    <ul>
+                        <li><a href="">High tech</a></li>
+                        <li><a href="">Lifestyle</a></li>
+                        <li><a href="">Others</a></li>
+                    </ul>
                 </div>
                 <div class="box">
-                    Les tips
+                    <h1>Les tips</h1>
                 </div>
             </div>
 
