Added "Who we are" box and improved text in boxes

--- a/examples/index.html
+++ b/examples/index.html
@@ -118,19 +118,34 @@
             </div>
             <div class="small-12 medium-4 large-4 columns sidebar">
                 <div class="box">
-                    Qui sommes-nous ?
-
+                    <div class="whoweare-image">
+                        <img src="http://lorempixel.com/50/50/?2">
+                    </div>
+                    <div class="whoweare-text">
+                        Nous sommes une équipe de passionnés qui a pour objectif de blablater un max pour remplir cette box.
+                        <a href="">En savoir plus...</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <h1>Les dernières astuces</h1>
+                    <ul>
+                        <li><a href="">Ajouter une date</a></li>
+                        <li><a href="">Convertir une string</a></li>
+                        <li><a href="">Jouer à Pacman</a></li>
+                        <li><a href="">Glander</a></li>
+                        <li><a href="">S'amuser au boulot</a></li>
+                    </ul>
                 </div>
                 <div class="box">
                     <h1>Les catégories</h1>
                     <ul>
-                        <li><a href="">High tech</a></li>
-                        <li><a href="">Lifestyle</a></li>
+                        <li><a href="">High tech / Serveurs</a></li>
+                        <li><a href="">High tech / Dev</a></li>
+                        <li><a href="">High tech / Design</a></li>
+                        <li><a href="">Lifestyle / Mode</a></li>
+                        <li><a href="">Lifestyle / Voyages</a></li>
                         <li><a href="">Others</a></li>
                     </ul>
-                </div>
-                <div class="box">
-                    <h1>Les tips</h1>
                 </div>
             </div>
 
